Added Labels and method Changes::contains

--- a/Kapitel/04_Admin_Panel/01_Layouts/01_Public_Layout/main.tex
+++ b/Kapitel/04_Admin_Panel/01_Layouts/01_Public_Layout/main.tex
@@ -1,4 +1,4 @@
-\subsection{Public-Layout}
+\subsection{Public-Layout}\label{AP_Public-Layout}
 
 \paragraph*{Statischer Aufbau}
 \subparagraph*{Desktop}
