--- a/Kapitel/04_Admin_Panel/01_Layouts/02_Admin_Layout/main.tex
+++ b/Kapitel/04_Admin_Panel/01_Layouts/02_Admin_Layout/main.tex
@@ -1,4 +1,4 @@
-\subsection{Admin-Layout}
+\subsection{Admin-Layout}\label{AP_Admin-Layout}
 
 \paragraph*{Statischer Aufbau}
 \subparagraph*{Desktop}
