--- a/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
@@ -1,4 +1,4 @@
-\subsection{Startseite}
+\subsection{Startseite}\label{AP_Startseite}
 
 Die Startseite ist die erste Seite des Admin-Panels und somit der Index.
 Auf der Startseite wird der Name des PSE-Projektes angezeigt sowie eine Kurzbeschreibung.
