--- a/Kapitel/04_Admin_Panel/02_Aufbau/02_Dashboard/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/02_Dashboard/main.tex
@@ -22,7 +22,7 @@ Sie zeigt verschiedene Informationen an, so mindestens:
     \item Anzahl der Einträge auf der Blacklist
 \end{itemize}
 
-\paragraph*{Statischer Aufbau}
+\paragraph*{Statischer Aufbau}\label{AP_Dashboard}
 \subparagraph*{Desktop}
 Das Dashboard ist in zwei übereinanderliegende horizontale Boxen aufgeteilt.
 In der oberen Box steht eine Begrüßung.
