--- a/Kapitel/04_Admin_Panel/02_Aufbau/03_Alias_Vorschläge/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/03_Alias_Vorschläge/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsection{Alias-Vorschläge}
+\subsection{Alias-Vorschläge}\label{AP_Alias-Vorschläge}
 
 Die Alias-Vorschläge-Seite repräsentiert die Schnittstelle für sämtliche Aktionen, die mit Alias-Vorschlägen gemacht werden können.
 
