--- a/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsection{Offizielle Aliasse}
+\subsection{Offizielle Aliasse}\label{AP_Offizielle_Aliasse}
 
 Die Offizielle-Aliasse-Seite zeigt alle aktuell angenommenen und somit offiziellen Aliasse an.
 
