--- a/Kapitel/04_Admin_Panel/02_Aufbau/05_Blacklist/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/05_Blacklist/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsection{Blacklist}
+\subsection{Blacklist}\label{AP_Blacklist}
 
 Die Blacklist-Seite zeigt alle aktuellen Einträge der Blacklist an.
 
