--- a/Kapitel/04_Admin_Panel/03_Aktionen/01_Alias_Vorschläge/01_Annehmen/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/01_Alias_Vorschläge/01_Annehmen/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{Annehmen}
+\subsubsection{Annehmen}\label{AP_Aktionen_Alias_Vorschläge_Annehmen}
 
 Die Aktion die ausgeführt wird, um einen Alias-Vorschlag anzunehmen.
 
