--- a/Kapitel/04_Admin_Panel/03_Aktionen/01_Alias_Vorschläge/02_Ablehnen/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/01_Alias_Vorschläge/02_Ablehnen/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsubsection{Ablehnen}
+\subsubsection{Ablehnen}\label{AP_Aktionen_Alias_Vorschläge_Ablehnen}
 
 Die Aktion die ausgeführt wird, um einen Alias-Vorschlag abzulehnen.
 
