--- a/Kapitel/04_Admin_Panel/03_Aktionen/01_Alias_Vorschläge/03_Blacklisten/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/01_Alias_Vorschläge/03_Blacklisten/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsubsection{Blacklisten}
+\subsubsection{Blacklisten}\label{AP_Aktionen_Alias_Vorschläge_Blacklisten}
 
 Die Aktion die ausgeführt wird, um einen Alias-Vorschlag auf die Blacklist zu setzen.
 
