--- a/Kapitel/04_Admin_Panel/03_Aktionen/01_Alias_Vorschläge/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/01_Alias_Vorschläge/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsection{Alias-Vorschläge}
+\subsection{Alias-Vorschläge}\label{AP_Aktionen_Alias_Vorschläge}
 
 \inprelmod{01_Annehmen}
 \inprelmod{02_Ablehnen}
