--- a/Kapitel/04_Admin_Panel/03_Aktionen/02_Offizielle_Aliasse/01_Löschen/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/02_Offizielle_Aliasse/01_Löschen/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{Löschen}
+\subsubsection{Löschen}\label{AP_Aktionen_Offizielle_Aliasse_Löschen}
 
 Die Aktion die ausgeführt wird, um einen offiziellen Alias zu löschen.
 
