--- a/Kapitel/04_Admin_Panel/03_Aktionen/03_Blacklist/01_Löschen/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/03_Blacklist/01_Löschen/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{Löschen}
+\subsubsection{Löschen}\label{AP_Aktionen_Blacklist_Löschen}
 
 Die Aktion die ausgeführt wird, um einen Blacklisteintrag zu löschen.
 
