--- a/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/01_Akzeptieren/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/01_Akzeptieren/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{Akzeptieren}
+\subsubsection{Akzeptieren}\label{AP_Aktionen_Änderungen_Akzeptieren}
 
 Die Aktion die ausgeführt wird, um eine Änderung anzunehmen.
 
