--- a/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/03_Akzeptiere_Alle/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/03_Akzeptiere_Alle/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsubsection{Akzeptiere Alle}
+\subsubsection{Akzeptiere Alle}\label{AP_Aktionen_Änderungen_Akzeptiere_Alle}
 
 Die Aktion die ausgeführt wird, um alle Änderungen anzunehmen.
 
