--- a/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsection{Änderungen}
+\subsection{Änderungen}\label{AP_Aktionen_Änderungen}
 
 \inprelmod{01_Akzeptieren}
 \inprelmod{02_Revidieren}
