--- a/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsection{Klasse AuthManager}
+\subsection{Klasse AuthManager}\label{AP_AuthManager}
 
 \inprelmod{00_Beschreibung}
 \inprelmod{01_login}
