--- a/Kapitel/04_Admin_Panel/04_Klassen/02_Change/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/02_Change/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsection{Interface Change}
+\subsection{Interface Change}\label{AP_Change}
 
 \inprelmod{00_Beschreibung}
 \inprelmod{01_perform}
