--- a/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/01_getMetadata/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/01_getMetadata/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ getMetadata() : JSON}}%$$$M
+\paragraph{\texttt{+ getMetadata() : JSON}}\label{AP_ChangeAction_getMetadata}%$$$M
 \paragraph*{Beschreibung}
 Getter für die Metadaten
 \paragraph*{Parameter}
