--- a/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/02_getCreationTime/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/02_getCreationTime/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ getCreationTime() : Date}}%$$$M
+\paragraph{\texttt{+ getCreationTime() : Date}}\label{AP_ChangeAction_getCreationTime}%$$$M
 \paragraph*{Beschreibung}
 Getter für den Erstellungszeitpunkt
 \paragraph*{Parameter}
