--- a/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/04_perform/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/04_perform/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ perform() : boolean}}%$$$M
+\paragraph{\texttt{+ perform() : boolean}}\label{AP_ChangeAction_perform}%$$$M
 \paragraph*{Beschreibung}
 Ruft \verb#Change::perform# dieser Änderung auf.
 \paragraph*{Parameter}
