--- a/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsection{Klasse ChangeAction}
+\subsection{Klasse ChangeAction}\label{AP_ChangeAction}
 
 \inprelmod{00_Beschreibung}
 \inprelmod{01_getMetadata}
