--- a/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/03_getChanges/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/03_getChanges/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ getChanges() : Iterable<JSON>}}%$$$M
+\paragraph{\texttt{+ getChanges() : Iterable<JSON>}}\label{AP_Changes_getChanges}%$$$M
 \paragraph*{Beschreibung}
 Getter für alle Änderungen.
 Im JSON stehen die Metadaten, die Zeit der Erstellung und die Kategorie.
