--- a/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsection{Klasse Changes}
+\subsection{Klasse Changes}\label{AP_Changes}
 
 \inprelmod{00_Beschreibung}
 \inprelmod{01_addChange}
