--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/04_isAdmin/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/04_isAdmin/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ isAdmin(accessToken: String) : boolean}}%$$$M
+\paragraph{\texttt{+ isAdmin(accessToken: String) : boolean}}\label{AP_Backend_isAdmin}%$$$M
 \paragraph*{Kurzbeschreibung}
 Überprüft ob der zugehörige Nutzer des Access-Tokens ein Administrator ist.
 \paragraph*{Beschreibung}
