--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/04_deleteOfficialAlias/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/04_deleteOfficialAlias/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ deleteOfficialAlias(alias: Alias) : boolean}}%$$$M
+\paragraph{\texttt{+ deleteOfficialAlias(alias: Alias) : boolean}}\label{AP_Backend_deleteOfficialAlias}%$$$M
 \paragraph*{Kurzbeschreibung}
 Entferne den gegebenen Alias aus den offiziellen Aliassen.
 \paragraph*{Beschreibung}
