--- a/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/01_getBuildingNumber/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/01_getBuildingNumber/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ getBuildingNumber() : String}}%$$$M
+\paragraph{\texttt{+ getBuildingNumber() : String}}\label{AP_Alias_getBuildingNumber}%$$$M
 \paragraph*{Beschreibung}
 Getter für die Gebäudenummer
 \paragraph*{Parameter}
