--- a/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/02_getRoomNumber/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/02_getRoomNumber/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ getRoomNumber() : String}}%$$$M
+\paragraph{\texttt{+ getRoomNumber() : String}}\label{AP_Alias_getRoomNumber}%$$$M
 \paragraph*{Kurzbeschreibung}
 Getter für die Raumnummer.
 \paragraph*{Beschreibung}
