--- a/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/03_getName/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/03_getName/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ getName() : String}}%$$$M
+\paragraph{\texttt{+ getName() : String}}\label{AP_Alias_getName}%$$$M
 \paragraph*{Beschreibung}
 Getter für den Bezeichner eines Aliases
 \paragraph*{Parameter}
