--- a/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/04_getMapID/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/04_getMapID/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ getMapID() : int}}%$$$M
+\paragraph{\texttt{+ getMapID() : int}}\label{AP_Alias_getMapID}%$$$M
 \paragraph*{Beschreibung}
 Getter für den Kartenobjektidentifizierer.
 \paragraph*{Parameter}
