--- a/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsection{Klasse Alias}
+\subsection{Klasse Alias}\label{AP_Alias}
 
 \inprelmod{00_Beschreibung}
 \inprelmod{01_getBuildingNumber}
