--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/01_Queries/01_getBlacklist/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/01_Queries/01_getBlacklist/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ getBlacklist() : Iterable<String>}}%$$$M
+\paragraph{\texttt{+ getBlacklist() : Iterable<String>}}\label{AP_Framework_getBlacklist}%$$$M
 \paragraph*{Kurzbeschreibung}
 Getter für die Blacklist.
 \paragraph*{Beschreibung}
