--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/02_logout/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/02_logout/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ logout() : boolean}}%$$$M
+\paragraph{\texttt{+ logout() : boolean}}\label{AP_Framework_logout}%$$$M
 \paragraph*{Kurzbeschreibung}
 Ermöglicht einem Benutzer sich abzumelden.
 \paragraph*{Beschreibung}
