--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/03_configure/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/03_configure/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ configure(settings: UserManagerSettings)}}%$$$M
+\paragraph{\texttt{+ configure(settings: UserManagerSettings)}}\label{AP_Framework_configure}%$$$M
 \paragraph*{Kurzbeschreibung}
 Ermöglicht die Konfiguration des AuthManagers für einen OIDC-Provider.
 \paragraph*{Beschreibung}
