--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/04_getAccessToken/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/04_getAccessToken/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ getAccessToken() : String}}%$$$M
+\paragraph{\texttt{+ getAccessToken() : String}}\label{AP_Framework_getAccessToken}%$$$M
 \paragraph*{Kurzbeschreibung}
 Getter für den Access-Token.
 \paragraph*{Beschreibung}
