--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/06_getUserInfo/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/06_getUserInfo/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ getUserInfo() : JSON}}%$$$M
+\paragraph{\texttt{+ getUserInfo() : JSON}}\label{AP_Framework_getUserInfo}%$$$M
 \paragraph*{Kurzbeschreibung}
 Getter für die Informationen des angemeldeten Benutzers.
 \paragraph*{Beschreibung}
