--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{Authentifizierung}
+\subsubsection{Authentifizierung}\label{AP_Framework_Auth}
 
 \inprelmod{01_login}
 \inprelmod{02_logout}
