--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/02_performChange/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/02_performChange/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ performChange(metadata: JSON, category: String) : boolean}}%$$$M
+\paragraph{\texttt{+ performChange(metadata: JSON, category: String) : boolean}}\label{AP_Framework_performChange}%$$$M
 \paragraph*{Beschreibung}
 Führt die entsprechende Änderung aus.
 Dabei wird die entsprechende Änderung entfernt.
