--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/03_removeChange/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/03_removeChange/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ removeChange(metadata: JSON, category: String) : boolean}}%$$$M
+\paragraph{\texttt{+ removeChange(metadata: JSON, category: String) : boolean}}\label{AP_Framework_removeChange}%$$$M
 \paragraph*{Beschreibung}
 Entferne die entsprechende Änderung.
 \paragraph*{Parameter}
