--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{Changes}
+\subsubsection{Changes}\label{AP_Framework_Changes}
 
 \inprelmod{01_addChange}
 \inprelmod{02_performChange}
