--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/05_getInstance/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/05_getInstance/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ static getInstance() : Framework}}%$$$M
+\paragraph{\texttt{+ static getInstance() : Framework}}\label{AP_Framework_getInstance}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die aktuelle \verb#Framework#-Instanz zurück.
 \paragraph*{Beschreibung}
