--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/06_constructor/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/06_constructor/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{- <<create>> constructor()}}%$$$M
+\paragraph{\texttt{- <<create>> constructor()}}\label{AP_Framework_constructor}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erzeuge eine Framework-Instanz.
 \paragraph*{Beschreibung}
