--- a/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/03_configure/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/03_configure/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ configure(settings: UserManagerSettings)}}%$$$M
+\paragraph{\texttt{+ configure(settings: UserManagerSettings)}}\label{AP_AuthManager_configure}%$$$M
 \paragraph*{Kurzbeschreibung}
 Ermöglicht die Konfiguration des AuthManager für einen OIDC-Provider.
 \paragraph*{Beschreibung}
