--- a/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/02_removeChange/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/02_removeChange/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ removeChange(action: ChangeAction) : boolean}}%$$$M
+\paragraph{\texttt{+ removeChange(action: ChangeAction) : boolean}}\label{AP_Changes_removeChange}%$$$M
 \paragraph*{Beschreibung}
 Entferne eine Änderung.
 \paragraph*{Parameter}
