--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/02_getOfficialAlias/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/02_getOfficialAlias/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ getOfficialAlias() : Iterable<Alias>}}%$$$M
+\paragraph{\texttt{+ getOfficialAlias() : Iterable<Alias>}}\label{AP_Backend_getOfficialAlias}%$$$M
 \paragraph*{Kurzbeschreibung}
 Getter für die offiziellen Aliasse.
 \paragraph*{Beschreibung}
