--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/03_getAliasSuggestions/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/03_getAliasSuggestions/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ getAliasSuggestions(minPositive: int, minNegative: int) : Iterable<Alias>}}%$$$M
+\paragraph{\texttt{+ getAliasSuggestions(minPositive: int, minNegative: int) : Iterable<Alias>}}\label{AP_Backend_getAliasSuggestions}%$$$M
 \paragraph*{Kurzbeschreibung}
 Getter für die Alias-Vorschläge mit einer Mindestanzahl an positiven und negativen Bewertungen.
 \paragraph*{Beschreibung}
