--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/01_acceptAliasSuggestion/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/01_acceptAliasSuggestion/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ acceptAliasSuggestion(alias: Alias) : boolean}}%$$$M
+\paragraph{\texttt{+ acceptAliasSuggestion(alias: Alias) : boolean}}\label{AP_Backend_acceptAliasSuggestion}%$$$M
 \paragraph*{Kurzbeschreibung}
 Akzeptiere den gegebenen Alias-Vorschlag.
 \paragraph*{Beschreibung}
