--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/05_deleteBlacklistEntry/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/05_deleteBlacklistEntry/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ deleteBlacklistEntry(entry: String) : boolean}}%$$$M
+\paragraph{\texttt{+ deleteBlacklistEntry(entry: String) : boolean}}\label{AP_Backend_deleteBlacklistEntry}%$$$M
 \paragraph*{Kurzbeschreibung}
 Entferne den gegeben Eintrag von der Blacklist.
 \paragraph*{Beschreibung}
