--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/02_Mutations/02_declineAliasSuggestion/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/02_Mutations/02_declineAliasSuggestion/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ declineAliasSuggestion(alias: Alias) : boolean}}%$$$M
+\paragraph{\texttt{+ declineAliasSuggestion(alias: Alias) : boolean}}\label{AP_Framework_declineAliasSuggestion}%$$$M
 \paragraph*{Kurzbeschreibung}
 Lehne den gegebenen Alias-Vorschlag ab.
 \paragraph*{Beschreibung}
