--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/01_login/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/01_login/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ login() : boolean}}%$$$M
+\paragraph{\texttt{+ login() : boolean}}\label{AP_Framework_login}%$$$M
 \paragraph*{Kurzbeschreibung}
 Ermöglicht einem Benutzer sich anzumelden.
 \paragraph*{Beschreibung}
