--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/05_getIDToken/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/05_getIDToken/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ getIDToken() : JWT}}%$$$M
+\paragraph{\texttt{+ getIDToken() : JWT}}\label{AP_Framework_getIDToken}%$$$M
 \paragraph*{Kurzbeschreibung}
 Getter für den ID-Token.
 \paragraph*{Beschreibung}
