--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/01_addChange/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/01_addChange/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ addChange(change: Change, metadata: JSON, category: String) : boolean}}%$$$M
+\paragraph{\texttt{+ addChange(change: Change, metadata: JSON, category: String) : boolean}}\label{AP_Framework_addChange}%$$$M
 \paragraph*{Beschreibung}
 Fügt eine Änderung mitsamt ihrer Metadaten hinzu.
 Dabei wird eine Instanz von \verb#ChangeAction# erzeugt und der aktuelle Zeitpunkt hinterlegt.
