--- a/Kapitel/05_CICD/04_Admin_Panel/main.tex
+++ b/Kapitel/05_CICD/04_Admin_Panel/main.tex
@@ -1,4 +1,4 @@
-\section{Admin-Panel}
+\section{Admin-Panel}\label{CICD_Admin_Panel}
 
 Die Entwicklung erfolgt auf einzelnen Zweigen, die in den \verb#main#-Zweig überführt werden, sobald diese fertig ausgearbeitet sind.
 Sobald der \verb#main#-Zweig aktualisiert wurde, wird die aktuelle Version des Admin-Panels gebaut und automatisch auf dem Server hochgeladen,
