--- a/Kapitel/00_Backend/Services/AliasService/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/AliasService/Beschreibung/main.tex
@@ -3,10 +3,9 @@
 Interface zum Zugriff auf zugrundeliegende Datenhaltung der bestehenden Aliasse.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
-    \item \texttt{addAlias(alias : String, mapID : int) : boolean}
-    \item \texttt{getAlias(mapID : int, userID : long) : List<Alias>}
-    \item \texttt{getAlias(mapID : int) : List<Alias>}
-    \item \texttt{getAlias(mapID : int, alias : String) : Alias}
-    \item \texttt{getAliasUpdates(version : int)}
-    \item \texttt{removeAlias(name : String) : boolean}
+    \item \texttt{addAlias(alias : String, mapID : int) : Boolean}
+    \item \texttt{getAlias(mapID : int, user : String) : Iterable<alias : String>}
+    \item \texttt{getAlias(mapID : int) : Iterable<alias : String>}
+    \item \texttt{getAliasUpdates(version : int) : Iterable<alias : String>}
+    \item \texttt{removeAlias(name : String) : Boolean}
 \end{itemize}
