--- a/Kapitel/00_Backend/Services/AliasService/getAlias_int_ListAlias/main.tex
+++ b/Kapitel/00_Backend/Services/AliasService/getAlias_int_ListAlias/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{getAlias(mapID : int) : List<Alias> aliases}}%$$$M
+\paragraph{\texttt{getAlias(mapID : int) : Iterable<alias : String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Definiert das Erteilen der Anweisung an Klasse \texttt{AliasRepository}, eine Liste der Aliasse des gewünschten Kartenobjekts zurückzugeben, und gibt diese wiederum zurück.
 \paragraph*{Beschreibung}
@@ -15,7 +15,3 @@ Hierfür wird die ID des gewünschten Kartenobjekts übergeben.
 \paragraph*{Rückgabewert}
 Die Liste mit den Aliassen des gewünschten Kartenobjekts.
 
-\paragraph*{Notizen zu Entwurfsmustern}
-\begin{itemize}
-	\item Überladen von Methoden $\Rightarrow$ Hier könnte die Bequemlichkeitsmethode verwendet werden
-\end{itemize}
