--- a/Kapitel/00_Backend/Services/AliasService/removeAlias_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/AliasService/removeAlias_String,int_boolean/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{removeAlias(alias : String, mapID : int) : boolean}}%$$$M
+\paragraph{\texttt{removeAlias(alias : String, mapID : int) : Boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Definiert das Erteilen der Anweisung an Klasse \texttt{AliasRepository}, einen globalen Alias aus der Datenbank zu entfernen.
 \paragraph*{Beschreibung}
