--- a/Kapitel/00_Backend/Services/DeletedAliasServiceImp/addDeletedAlias_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasServiceImp/addDeletedAlias_String,int_boolean/main.tex
@@ -1,4 +1,4 @@
-\paragraph*{\texttt{addDeletedAlias(deletedAlias : String, mapID : int) : boolean}}%$$$M
+\paragraph*{\texttt{addDeletedAlias(deletedAlias : String, mapID : int) : Boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erteilt die Anweisung an Klasse \texttt{DeletedAliasRepository}, einen Alias zur Datenbank der entfernten Aliasse hinzuzufügen.
 \paragraph*{Beschreibung}
