--- a/Kapitel/00_Backend/Services/AliasSuggestionServiceImp/addAliasSuggestion_String,int,String_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/AliasSuggestionServiceImp/addAliasSuggestion_String,int,String_boolean/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{addAliasSuggestion(aliasSuggestion : String, mapID : int, user : String) : boolean}}%$$$M
+\paragraph{\texttt{addAliasSuggestion(aliasSuggestion : String, mapID : int, user : String) : Boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erteilt die Anweisung an Klasse \texttt{AliasSuggestionRepository}, einen Alias-Vorschlag zur Datenbank der Alias-Vorschläge hinzuzufügen.
 \paragraph*{Beschreibung}
