ammend to enhanced BlacklistService

--- a/Kapitel/00_Backend/Services/BlacklistServiceImp/getBlacklist_ListString/main.tex
+++ b/Kapitel/00_Backend/Services/BlacklistServiceImp/getBlacklist_ListString/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{getBlacklist() : List<blacklisted : String>}}%$$$M
+\paragraph{\texttt{getBlacklist() : Iterable<blacklisted : String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt eine Liste aller Zeichenketten, die in der Blacklist hinterlegt sind, zurück.
 \paragraph*{Beschreibung}
