added diagramm for services

--- a/Kapitel/00_Backend/Services/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/Beschreibung/main.tex
@@ -21,3 +21,9 @@ zugrundeliegende Repositoryklasse um ihre Methoden umzusetzen.
     \item MapIDServiceImp
 \end{itemize}
 
+\begin{figure}
+    \centering
+    \includegraphics[width=\textwidth]{\currfiledir Services}
+    \caption{UML-Paketdiagramm}
+\end{figure}
+
