Fix typo as requested in 'Models/AliasSuggestion'

--- a/Kapitel/00_Backend/Models/AliasSuggestion/getPosVotes_int/main.tex
+++ b/Kapitel/00_Backend/Models/AliasSuggestion/getPosVotes_int/main.tex
@@ -5,4 +5,4 @@ Gibt die Anzahl an positiven Bewertungen, die der Alias-Vorschlag hat.
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Die Methode ermöglicht, dass die Anzahl an positiven Bewertungen, die der Alias-Vorschlag hat, angefragt und zurückgegeben werden kann.
 \paragraph*{Rückgabewert}
-Die Anzahl an positiven Bewertungen, die der Alias-Vorschlag hat-
+Die Anzahl an positiven Bewertungen, die der Alias-Vorschlag hat.
