--- a/Kapitel/00_Backend/Models/AliasSuggestion/getNegVotes_int/main.tex
+++ b/Kapitel/00_Backend/Models/AliasSuggestion/getNegVotes_int/main.tex
@@ -1,8 +1,8 @@
-\paragraph{\texttt{getPosVotes() : int}}%$$$M
+\paragraph{\texttt{getNegVotes() : int}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die Anzahl an negativen Bewertungen, die der Alias-Vorschlag hat.
 \paragraph*{Beschreibung}
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Die Methode ermöglicht, dass die Anzahl an negativen Bewertungen, die der Alias-Vorschlag hat, angefragt und zurückgegeben werden kann.
 \paragraph*{Rückgabewert}
-Die Anzahl an negativen Bewertungen, die der Alias-Vorschlag hat-
+Die Anzahl an negativen Bewertungen, die der Alias-Vorschlag hat.
