--- a/Kapitel/02_App/05_Search/Klassen/SearchController/main.tex
+++ b/Kapitel/02_App/05_Search/Klassen/SearchController/main.tex
@@ -28,7 +28,7 @@ Nimmt den aktuellen Input-String entgegen und aktualisiert damit die Suchvorschl
 \paragraph*{Rückgabewert}
 Void.
 
-\subsubsection*{\texttt{+ confirminput()}}%$$$M
+\subsubsection*{\texttt{+ confirmInput()}}%$$$M
 \paragraph*{Beschreibung}
 Zeigt das Kartenobjekts zu dem Suchvorschlag mit der höchsten Übereinstimmung an und wechselt dazu in den Kartenmodus.
 Fordert die Speicherung des Suchvorschlags von einer Klasse, die ISearchModel implementiert.
