Added images to App

--- a/Kapitel/02_App/03_Map/01_View/MapScreen/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/MapScreen/main.tex
@@ -78,3 +78,20 @@ Eine Änderung der Daten wirkt sich wie folgt aus:
 Zur Implementierung können die Klassen \href{https://osmdroid.github.io/osmdroid/javadocs/osmdroid-android/debug/org/osmdroid/views/overlay/mylocation/MyLocationNewOverlay.html}
 {MyLocationNewOverlay} für das Anzeigen des Standorts und \href{https://osmdroid.github.io/osmdroid/javadocs/osmdroid-android/debug/org/osmdroid/views/overlay/compass/CompassOverlay.html}
 {CompassOverlay} für das Anzeigen des Kompasses in Betracht gezogen werden.
+
+\subsubsection*{Bilder}
+\begin{minipage}{\linewidth}
+    \centering
+    \begin{minipage}{.49\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[width=\textwidth]{Karte_Final.png}
+        \captionof{figure}{Kartenansicht}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+    \begin{minipage}{.49\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[width=\textwidth]{Karte_mit_Gebaudeinformation_Final.png}
+        \captionof{figure}{Etagenansicht}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+\end{minipage}
