--- a/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
@@ -23,3 +23,20 @@ der AddAliasScreen einen IAddAliasController.
     aus dem Textfeld gelöscht. Der Screen zeigt in jedem Fall eine Meldung zum Erfolg bez. Misserfolg der Aktion an.
     \item Darunter werden für dieses Kartenobjekt bereits existierende globale Aliasse angezeigt.
 \end{itemize}
+
+\subsubsection*{Bilder}
+\begin{minipage}{\linewidth}
+    \centering
+    \begin{minipage}{.49\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[width=\textwidth]{Alias_hinzufügen_Gebaude.png}
+        \captionof{figure}{Gebäudealias hinzufügen}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+    \begin{minipage}{.49\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[width=\textwidth]{Alias_hinzufügen_Raum.png}
+        \captionof{figure}{Raumalias hinzufügen}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+\end{minipage}
