--- a/Kapitel/02_App/05_Search/Klassen/SearchScreen/main.tex
+++ b/Kapitel/02_App/05_Search/Klassen/SearchScreen/main.tex
@@ -70,3 +70,14 @@ Ein bereits existierendes Widget, das dem Benutzer eine Benutzeroberfläche biet
 Zeigt eine Liste von Suchvorschlägen oder -ergebnissen an, falls verfügbar 
 und ermöglicht es dem Benutzer, einen Vorschlag oder ein Ergebnis auszuwählen.
 Diese Bibliothek kann für die Implementierung genutzt werden.
+
+\subsubsection*{Bilder}
+\begin{minipage}{\linewidth}
+    \centering
+    \begin{minipage}{.49\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[width=\textwidth]{Suchfunktion.png}
+        \captionof{figure}{Suchfunktion}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+\end{minipage}
