--- a/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
@@ -32,3 +32,35 @@ Der SettingsScreen zeigt folgende Einstellungs-Möglichkeiten untereinander an:
     \item Hilfe anzeigen: Wird auf diese Schaltfläche geklickt, wechselt die App in die Dokumentenansicht und zeigt dort eine Hilfeseite an.
     \item Lizenzen anzeigen: Wird auf diese Schaltfläche geklickt, wechselt die App in die Dokumentenansicht und zeigt dort Open-Source-Lizenzen der App an.
 \end{itemize}
+
+\subsubsection*{Bilder}
+\begin{minipage}{\linewidth}
+    \centering
+    \begin{minipage}{.49\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[width=\textwidth]{Einstellungen_oben.png}
+        \captionof{figure}{Einstellungen (oben)}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+    \begin{minipage}{.49\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[width=\textwidth]{Einstellungen_unten.png}
+        \captionof{figure}{Einstellungen (unten)}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+\end{minipage}
+\begin{minipage}{\linewidth}
+    \centering
+    \begin{minipage}{.49\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[width=\textwidth]{Sprache.png}
+        \captionof{figure}{Spracheinstellungen}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+    \begin{minipage}{.49\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[width=\textwidth]{Theme.png}
+        \captionof{figure}{Themeeinstellungen}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+\end{minipage}
